[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["alexsandrocn <alexsandronepunuceno@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^Â3.8"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
